2006-06-01  Kazuhiko  <kazuhiko@fdiary.net>
	* plugin/00default.rb (saveconf_theme): fix a bug that raises an
	exception when setting a wrong theme_path (closes #64).

2006-04-28  Kazuhiro NISHIYAMA <zn@mbf.nifty.com>
	* hiki/db/ptstore.rb (fetch): merge from pstore.rb in ruby 1.8.4.

2006-03-15  Kouhei Yanagita <yanagi@shakenbu.org>
	* hiki/config.rb (mobile_agent?): support WILLCOM's mobile agents (closes #57).

2006-02-27  Kouhei Yanagita <yanagi@shakenbu.org>
	* hiki/plugin.rb (cookie_path): fix the bug of breaking the path of the cookie
	when base_url is specified (closes #56).

2006-02-18  Kouhei Yanagita <yanagi@shakenbu.org>
	* misc/plugin/show_plugins.rb: add a comment.

2006-02-15  Kouhei Yanagita <yanagi@shakenbu.org>
	* plugin/02help.rb (set_s): support Safari (patch by NAGASAKI).

2006-02-04  Kazuhiro NISHIYAMA <zn@mbf.nifty.com>
	* hiki/db/ptstore.rb: bug fix file.flock(File::LOCK_UN) without lock.

2006-01-30  Kouhei Yanagita <yanagi@shakenbu.org>
	* misc/plugin/attach.rb, hiki/image_size.rb: suppress the width/height
	attributes when ImageSize could not determine the size of an image.

	* misc/plugin/attach.rb (attach_image_anchor): introduce options['attach.cache_url'].
	Don't use this unless all of the attached file is believed to be safe (patch by U.Nakamura).

	* style/default/html_formatter.rb (replace_inline): Do not consider WikiName inside of pre elements.

2005-12-31  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/config.rb (load_cgi_conf): convert @mail to Array even if
	no cgi_conf file is found.

2005-12-29  Kazuhiko  <kazuhiko@fdiary.net>
	* plugin/00default.rb: revise handling of theme_path (by OZAWA
	Sakuro [Hiki-dev:01086]).

	* hiki/interwiki.rb (interwiki): escapeHTML uris (by KURODA
	Hiraku [Hik-dev:01089]).

	* plugin/02help.rb: code cleanup by NAGASAKI.

	* style/default/hikidoc.rb: sync with hikidoc rev.36.
	  support relative inline URLs.
	  fix parse_table (reported by H.M) (closes #44).
